<resources>

    <string name="baseUrl">http://192.168.68.113:5000/</string>

    <string name="app_name">YouTube</string>
    <string name="notification">notification</string>
    <string name="search">search</string>
    <string name="account">account</string>
    <string name="add_video">add video</string>
    <string name="home_button">home button</string>
    <string name="picture">picture</string>
    <string name="views">Views</string>
    <string name="video_title">Video Title</string>
    <string name="creator_name">Creator Name</string>
    <string name="dot">•</string>
    <string name="publish_date">Publish Date</string>
    <string name="thumbnail">thumbnail</string>
    <string name="home">Home</string>
    <string name="shorts">Shorts</string>
    <string name="subscriptions">Subs</string>
    <string name="profile">Profile</string>
    <string name="back">back</string>
    <string name="video_player">video player</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="comments">comments</string>
    <string name="toggle_comments">toggle_comments</string>
    <string name="add_comment">add comment</string>
    <string name="enter">enter</string>
    <string name="edit_comment">edit comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="edit_comment_text">Edit Comment</string>
    <string name="cast">cast</string>
    <string name="video_option">video option</string>
    <string name="edit_video">edit video</string>
    <string name="delete_video">delete video</string>
    <string name="video_name">Video Name</string>
    <string name="creator">Creator</string>
    <string name="video_path">Video Path</string>
    <string name="video_length">Video Length</string>
    <string name="subscribe">subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="creator_profile_pic">creator profile pic</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile_image">Profile Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_log_in">Already have an account? log in</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm">Confirm Password</string>
    <string name="youtube_logo_image_desc">Youtube Logo</string>
    <string name="sign_up_upload_image">Upload Image</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_log_in">Log in</string>
    <string name="login_username">Username</string>
    <string name="login_email">Email</string>
    <string name="login_btn">Login</string>
    <string name="login_youtube_logo_desc">Youtube logo</string>
    <string name="login_password">Password</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="login_to_sign_up">Sign up!</string>
    <string name="settings">settings</string>
    <string name="guest">guest</string>
    <string name="sign_in">sign in</string>
    <string name="logOut">Log out</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="save_to_watch_later">save to watch later</string>
    <string name="download">download</string>
    <string name="upload_video">upload Video</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="upload_thumbnail">upload Thumbnail</string>
    <string name="enter_video_title">Enter video title</string>
    <string name="submit">submit</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="add_thumbnail">Add Thumbnail</string>
    <string name="about">about</string>
    <string name="app_info">Welcome to YouTube Clone, your ultimate destination for streaming, discovering, and enjoying videos across various genres and interests. Our app is designed to offer an exceptional user experience with a sleek and intuitive interface, making it easy to find and watch your favorite videos.\n\nHow to Use:\n\n1. Browse and Discover: Navigate through different sections using the bottom navigation bar to explore a wide range of videos.\n2 .Search and Watch: Use the search function to find specific videos or channels. Click on any video to start watching.\n3 .Interact and Engage: Like, comment, and share videos to connect with other users and support your favorite content creators.\n4 .Manage Your Profile: Click on your profile picture in the bottom navigation bar to access and customize your profile, view your playlists, and manage your uploaded videos.\n\nOur Mission:\n\nAt YouTube Clone, we are committed to creating a platform that not only entertains but also connects people through the power of video. We continuously work on improving our app to provide a better user experience and to introduce new features that meet your needs.\n\nThank you for choosing YouTube Clone. Enjoy your streaming experience!</string>
    <string name="youtube_clone_info">Youtube clone info</string>
    <string name="about_youtube_clone">About youtube clone</string>
    <string name="select_thumbnail">Select Thumbnail</string>
    <string name="select_video">Select Video</string>
    <string name="camera">camera</string>
</resources>