<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.VideoPlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <VideoView
                    android:id="@+id/tv_video_view"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/video_player" />

                <ImageButton
                    android:id="@+id/tv_video_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back"
                    android:padding="4dp"
                    app:srcCompat="@drawable/ic_back" />

            </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_video_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:paddingHorizontal="10dp"
                    android:text="@string/video_title"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="8"
                    tools:text="Sample Video Title"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/edit_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/edit_video"
                    app:srcCompat="@drawable/ic_edit" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/tv_video_views"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/views"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@android:color/darker_gray"
                    tools:text="1M views"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/dot"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_publish_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/publish_date"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    tools:text="1 year ago" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@android:color/transparent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@android:color/transparent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/creator_pic"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:src="@drawable/thumbnail1"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/circle"
                        android:layout_weight="0">

                    </com.google.android.material.imageview.ShapeableImageView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_creator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/creator_name"
                            android:textSize="15sp"
                            android:layout_marginStart="3dp"
                            android:paddingVertical="5dp"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/poppins_light"
                            android:textColor="@color/text_color"
                            tools:text="creator" />

                        <TextView
                            android:id="@+id/tv_creator_subs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/views"
                            android:layout_marginStart="10dp"
                            android:paddingVertical="5dp"
                            android:textSize="15sp"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/poppins_light"
                            android:textColor="@android:color/darker_gray"
                            tools:text="1M" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_subscribe"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:padding="1dp"
                        android:textColor="@color/white"
                        android:text="@string/subscribe"
                        android:backgroundTint="@color/red"
                        android:layout_weight="1">
                    </Button>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/tv_comments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/comments"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Comments (10)"
                    android:layout_weight="10" />

                <ImageButton
                    android:id="@+id/iv_toggle_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/toggle_comments"
                    app:srcCompat="@drawable/ic_arrow_down" />

                <ImageButton
                    android:id="@+id/tv_btn_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_like"
                    android:contentDescription="@string/like"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/tv_btn_dislike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_dislike"
                    android:contentDescription="@string/dislike"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/tv_btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_share"
                    android:contentDescription="@string/share"
                    android:layout_weight="1" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lstVideos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:scrollbars="vertical">
                </androidx.recyclerview.widget.RecyclerView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_comments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/system_color"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:visibility="gone"
        android:contentDescription="@string/add_comment" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>