<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.AddVideoActivity">

    <LinearLayout
        android:id="@+id/top_line"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            app:srcCompat="@drawable/youtube_text"
            android:contentDescription="@string/app_name" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/iv_thumbnail_container"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/top_line">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#d9d9d9"
            android:contentDescription="@string/video_thumbnail"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_add_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_thumbnail"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="#66000000"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/vv_container"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="15dp"
        android:layout_below="@id/iv_thumbnail_container"
        android:layout_marginBottom="10dp">

        <VideoView
            android:id="@+id/vv_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_add_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_video"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="#66000000"/>
    </FrameLayout>

    <EditText
        android:id="@+id/et_video_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_video_title"
        android:layout_marginHorizontal="15dp"
        android:textSize="20sp"
        android:layout_below="@id/vv_container"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_add_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:layout_alignEnd="@id/bottom_navigation"
        android:layout_margin="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/add_video"
        android:textColor="@color/white">
    </Button>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/text_color"
        app:itemTextAppearanceActiveBoldEnabled="false" />

</RelativeLayout>
