<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:backgroundTint="@color/light_grey"
                android:background="@color/light_grey"
                android:contentDescription="@string/thumbnail" />

            <TextView
                android:id="@+id/video_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="8dp"
                android:background="@drawable/black_faded_box"
                android:padding="4dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:text="12:34" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/creator_pic"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                android:background="@color/light_grey"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/circle">

            </com.google.android.material.imageview.ShapeableImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/video_name"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:paddingHorizontal="8dp"
                android:text="@string/video_title"
                android:layout_marginEnd="15dp"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="Sample Video Title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp">

            <TextView
                android:id="@+id/creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator_name"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                tools:text="Sample Creator Name"
                android:fontFamily="@font/poppins_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dot"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/views"
                android:textSize="13sp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@android:color/darker_gray"
                tools:text="1M views" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dot"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/publish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/publish_date"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp"
                tools:text="1 year ago" />
        </LinearLayout>

        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>